Fix overlapping text when searchfield is clearable

--- a/src/components/searchfield/_searchfield.scss
+++ b/src/components/searchfield/_searchfield.scss
@@ -64,6 +64,13 @@
     border-color 300ms $cubic-ease);
   }
 
+  // This rule will only work when searchfield is clearable.
+  &.has-close-icon-button {
+    .searchfield {
+      padding-right: 28px;
+    }
+  }
+
   // This variation is used on white-backgrounds (usually in list-detail, listviews, or builder pattern)
   &.context {
     white-space: nowrap;
